# pre_bunker_health_communications_system

./: .gitignore  2_goals-v2.md  README.md  TEST_STATUS_TRACKER.md  check_test_status.sh  development-plan-v2.md  development-plan.md  meta_paper.md  prompt.md  research_execution_plan.md  run_async_test.sh  v2_goals.md
agent-project/: .gitignore  TEST_RUNNER_README.md  pyproject.toml  run_all_tests.sh  test_v1_1.py  test_v1_11.py  test_v1_14.py  test_v1_15.py  test_v1_16.py  test_v1_19.py  test_v1_2.py  test_v1_3.py  test_v1_4.py  test_v1_5.py  test_v1_6.py  test_v1_7.py  test_v1_9.py  test_v2_0.py  v1_10_detailed_log.txt  v1_12_detailed_log.txt  v1_13_detailed_log.txt  v1_17_detailed_log.txt  v1_18_detailed_log.txt  v1_9_detailed_log.txt  v2_0_detailed_log.txt
agent-project/logs/: 11_v1_11_detailed_log.txt  12_v1_12_detailed_log.txt  13_v1_13_detailed_log.txt  14_v1_14_detailed_log.txt  17_v1_17_detailed_log.txt  1_v1_1_detailed_log.txt  21_v1_19_corrected_log.txt  23_v2_0_final_corrected_log.txt  25_v2_0_truly_final_log.txt  2_v1_2_detailed_log.txt  6_v1_6_detailed_log.txt  8_v1_8_detailed_log.txt  comprehensive_issues_analysis.md
agent-project/old_tests_logs/: v1_14_detailed_log.txt  v1_15_detailed_log.txt  v1_19_detailed_log.txt
agent-project/organize_me/: PRIORITY_QUEUE.md  README.md
agent-project/src/: agent.py  agents.py  error_handler.py  runner.py  search_tool.py  tools.py  tracing.py
agent-project/templates/: enhanced_index.html  enhanced_results.html  index.html  results.html
agent-project/tests/: test_v1_10.py  test_v1_12.py  test_v1_13.py  (+8 more)
(+66 files in other folders)
