[project]
name = "agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "nest-asyncio>=1.6.0",
    "openai>=1.101.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
